{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 11,
  "lineage": "629c59bd-e8af-cdfc-680a-ae6d5642cc72",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "auto_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0654eca5398d61839",
            "domain": "vpc",
            "id": "eipalloc-0654eca5398d61839",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-1-102-102.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.102.102",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "auto_eip"
            },
            "tags_all": {
              "Name": "auto_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "automated-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951044597316:internet-gateway/igw-0592990b2c3c66215",
            "id": "igw-0592990b2c3c66215",
            "owner_id": "951044597316",
            "tags": {
              "Name": "automated-igw"
            },
            "tags_all": {
              "Name": "automated-igw"
            },
            "vpc_id": "vpc-08eff8b847c8048c9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0654eca5398d61839",
            "association_id": "eipassoc-08ed117d36d2a2336",
            "connectivity_type": "public",
            "id": "nat-0c3f1eeb36343dc23",
            "network_interface_id": "eni-0d0a92f664f2ade30",
            "private_ip": "10.0.1.99",
            "public_ip": "65.1.102.102",
            "subnet_id": "subnet-06427d259dafd0102",
            "tags": {
              "Name": "automated-NAT"
            },
            "tags_all": {
              "Name": "automated-NAT"
            }
          },
          "dependencies": [
            "aws_eip.auto_eip",
            "aws_internet_gateway.automated-igw",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951044597316:route-table/rtb-0bb7bb36d5285ce00",
            "id": "rtb-0bb7bb36d5285ce00",
            "owner_id": "951044597316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c3f1eeb36343dc23",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08eff8b847c8048c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.auto_eip",
            "aws_internet_gateway.automated-igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951044597316:route-table/rtb-05dd8d1b76a86e407",
            "id": "rtb-05dd8d1b76a86e407",
            "owner_id": "951044597316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0592990b2c3c66215",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08eff8b847c8048c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.automated-igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b48c52d2690b830",
            "route_table_id": "rtb-0bb7bb36d5285ce00",
            "subnet_id": "subnet-09379f54ea889d5e4"
          },
          "dependencies": [
            "aws_eip.auto_eip",
            "aws_internet_gateway.automated-igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec300e5c67556f25",
            "route_table_id": "rtb-05dd8d1b76a86e407",
            "subnet_id": "subnet-06427d259dafd0102"
          },
          "dependencies": [
            "aws_internet_gateway.automated-igw",
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951044597316:subnet/subnet-09379f54ea889d5e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09379f54ea889d5e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951044597316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-automated-vpc"
            },
            "tags_all": {
              "Name": "private-subnet-automated-vpc"
            },
            "vpc_id": "vpc-08eff8b847c8048c9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951044597316:subnet/subnet-06427d259dafd0102",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06427d259dafd0102",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951044597316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-automated-vpc"
            },
            "tags_all": {
              "Name": "public-subnet-automated-vpc"
            },
            "vpc_id": "vpc-08eff8b847c8048c9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951044597316:vpc/vpc-08eff8b847c8048c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-063763c2eb7dfd23d",
            "default_route_table_id": "rtb-03c13895f50ed8c06",
            "default_security_group_id": "sg-0a6a03ca6fff605e3",
            "dhcp_options_id": "dopt-0fabdac0e1cac0eab",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08eff8b847c8048c9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c13895f50ed8c06",
            "owner_id": "951044597316",
            "tags": {
              "Name": "automated-vpc"
            },
            "tags_all": {
              "Name": "automated-vpc"
            }
          }
        }
      ]
    }
  ]
}